# data_scince-cyber

./: README.md  http2vec_analysis.ipynb  pyproject.toml  requirements.txt
artifacts/roberta-mlm/: config.json  merges.txt  tokenizer.json  tokenizer_config.json  vocab.json
artifacts/tokenizer/: merges.txt  tokenizer.json  tokenizer_config.json  vocab.json
data/: README.md
notebooks/: http2vec_analysis_colab.ipynb
reports/: http2vec_report.tex  model_comparison.csv  results_summary.json
scripts/: build_notebook.py  download_data.py
src/http2vec/: __init__.py  config.py  interfaces.py  pipeline.py  utils.py
src/http2vec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/http2vec/classification/: __init__.py  anomaly.py  neural.py  supervised.py
src/http2vec/data/: __init__.py  download.py  duplicates.py  features.py  loaders.py  parser.py  schemas.py
src/http2vec/evaluation/: __init__.py  metrics.py
src/http2vec/models/: __init__.py  embedder.py  language_model.py
src/http2vec/tokenization/: __init__.py  bbpe.py
src/http2vec/visualization/: __init__.py  plots.py
